whatsapp messeges functionality

--- a/pages/whatsapp.html
+++ b/pages/whatsapp.html
@@ -176,10 +176,10 @@
                   rows="4"
                 ></textarea>
               </div>
-              <button class="i-rec-btn active active-button">
+              <button class="i-rec-btn active-button">Add Message</button>
+              <button class="a-rec-btn active active-button">
                 Add Message
               </button>
-              <button class="a-rec-btn active-button">Add Message</button>
             </form>
           </div>
         </div>
@@ -272,7 +272,7 @@
                   <img class="mg-rt" src="/images/whatsapp-plus.svg" alt="" />
                   <div class="i-chat__input--div inp-div">
                     <textarea
-                      class="i-chat__input i-inp"
+                      class="i-chat__input i-inp inp"
                       name="i-input"
                       id=""
                       cols="1"
@@ -292,7 +292,7 @@
                   />
                   <img
                     src="/images/whatsapp-Camera.svg"
-                    class="i-send-btn"
+                    class="i-send-btn send"
                     alt=""
                   />
                 </div>
@@ -380,7 +380,7 @@
                     <img src="/images/emoji-icon.svg" alt="" />
 
                     <textarea
-                      class="i-chat__input a-chat__input a-inp"
+                      class="i-chat__input a-chat__input a-inp inp"
                       name="a-input "
                       id=""
                       cols="1"
@@ -394,7 +394,7 @@
                     />
                   </div>
                   <img
-                    class="mg-rt a-send-btn"
+                    class="mg-rt a-send-btn send"
                     src="/images/whatsapp-recoder.png.svg"
                     alt=""
                   />
@@ -436,11 +436,13 @@
         /></a>
       </div>
     </footer>
+    <script src="../javascript/chats.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
 
     <script src="../javascript/download.js"></script>
     <script src="../javascript/navbar.js"></script>
     <script src="../javascript/control-panel.js"></script>
+    <script src="../javascript/whatsapp.js"></script>
   </body>
 </html>
