--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -123,6 +123,45 @@
     </header>
     <!-- =========================End of navbar======================= -->
     <div class="main-container ninety-percent">
+      <div class="card">
+        <div class="card-contents">
+          <h4 class="card__name">Having Issues on how to use?</h4>
+
+          <p>
+            <span class="card__read-more">
+              Go To Control Panel
+              <br />
+              1. Enter Desired Battery percentage, and it will
+              automaticallyreflect on the battery percentage section.
+              <br />
+
+              2. Click on the "Upload Image" button, select the desired image,
+              The profile image icon on the chat interface should now display
+              the inputted image.
+              <br />
+              3. Input the desired username in the designated field and it will
+              automatically display on the username section on the chat
+              interface
+              <br />
+              4. Input if the user is online or offline. The status indicator on
+              the chat interface should now display the selected option.
+              <br />
+              5. Input the desired message in the message filed for the mimicked
+              sender and it will automatically display on the sender section on
+              the chat interface.
+              <br />
+              6. Input the desired message in the designated field for the user
+              sender and it will automatically display on the user sender
+              section on the chat interface there by mimicking your own respons.
+              <br />
+              7. Click on the "Download" button to download the chat section as
+              a screenshot.</span
+            >
+          </p>
+
+          <p class="read-more-btn">Read Guide...</p>
+        </div>
+      </div>
       <div class="general-interface-container d-flex">
         <div class="control-panel">
           <h3 class="control-panel-heading">Chat Generator Setting</h3>
@@ -131,27 +170,39 @@
             <form action="sender-details" class="sender-details">
               <div class="input-containers">
                 <label for="battery"><h4>Battery Percentage</h4></label>
-                <input type="text" placeholder="50%" />
+                <input type="text" placeholder="50%" class="battery-input" />
               </div>
 
               <div class="input-containers">
                 <label for="User name"><h4>Direct Message With</h4></label>
-                <input type="text" placeholder="john doe" />
+                <input
+                  type="text"
+                  placeholder="john doe"
+                  class="username-input"
+                />
               </div>
 
               <div class="input-containers">
                 <label for="status"><h4>Status</h4></label>
-                <input type="text" placeholder="Online" />
+                <input type="text" placeholder="Online" class="status-input" />
               </div>
             </form>
             <form action="" class="sender-profile">
               <div class="sender-container d-flex-space-a">
-                <div class="profile-photo">
+                <div class="profile-photo profile-img">
                   <img src="../images/profile.svg" alt="" />
                 </div>
                 <div class="profile-input">
                   <h4>Profile Photo</h4>
-                  <button class="active-button">Select Image</button>
+                  <input
+                    type="file"
+                    accept="images/*"
+                    class="upload-img"
+                    id="upload-img-btn"
+                  />
+                  <label for="upload-img-btn" class="active-button"
+                    >Select Image</label
+                  >
                 </div>
               </div>
             </form>
@@ -176,8 +227,8 @@
         <div class="preview-section">
           <div class="preview-header d-flex-space-b">
             <div class="preview-btn-div">
-              <button class="inactive-button">iPhone</button>
-              <button class="inactive-button active">Android</button>
+              <button class="inactive-button switch active">iPhone</button>
+              <button class="inactive-button switch">Android</button>
             </div>
             <h2 class="preview-heading">Generate Fake Telegram Chat</h2>
           </div>
@@ -185,15 +236,17 @@
 
           <div class="device-container">
             <!-- IPHONE -->
-            <div class="iphone">
+            <div class="iphone device active" id="iphone">
               <div class="task-bar d-flex-space-b">
-                <p class="iphone-time time">12:00</p>
+                <p class="iphone-time time local-time">12:00</p>
                 <div class="network-wifi d-flex">
                   <img src="../images/Mobile Signal.svg" alt="" />
                   <img src="../images/Wifi.svg" alt="" />
 
                   <div class="battery-container">
-                    <div class="battery-percentage"></div>
+                    <div
+                      class="battery-percentage battery-percentage-iphone"
+                    ></div>
                     <div class="dash"></div>
                   </div>
                 </div>
@@ -204,14 +257,12 @@
                   <span class="mg-rt">chats</span>
                 </div>
                 <div>
-                  <p class="name">Martha Craig</p>
-                  <p class="sm-ft last-seen">last seen just now</p>
+                  <p class="name username">Martha Craig</p>
+                  <p class="sm-ft last-seen status">last seen just now</p>
                 </div>
-                <img
-                  class="i-chat__profile-pic"
-                  src="/images/profile.svg"
-                  alt=""
-                />
+                <div class="profile-photo profile-img i-chat__profile-pic">
+                  <img class="" src="/images/profile.svg" alt="" />
+                </div>
               </div>
 
               <div class="chat-section">
@@ -334,18 +385,19 @@
               </div>
             </div>
             <!-- ANDROID -->
-            <div class="android active">
-              <header class="android-header">
-                <div class="android-taskbar d-flex-space-b">
-                  <div class="android-time time">
-                    <img src="../images/Mobile Signal.svg" alt="" />
-                    <img src="../images/Mobile Signal.svg" alt="" />
-                  </div>
+            <div class="android device" id="android">
+              <header class="mobile-header">
+                <div class="android-tasbar d-flex-space-b">
+                  <div class="android-time time local-time">12:00pm</div>
 
                   <div class="android-network-battery d-flex-space-b">
-                    <span class="sm-ft">50%</span>
-                    <img src="/images/android-battery-white.svg" alt="" />
-                    <span class="sm-ft">10:04 am</span>
+                    <img src="../images/Mobile Signal-white.svg" alt="" />
+                    <img src="../images/Mobile Signal-white.svg" alt="" />
+
+                    <div class="android-battery-container">
+                      <div class="battery-percentage"></div>
+                      <div class="android-dash"></div>
+                    </div>
                   </div>
                 </div>
                 <!-- /////// -->
@@ -355,15 +407,16 @@
                       <img src="/images/telegram-back-icon.svg" alt="" />
                     </div>
                     <div class="d-flex mg-rt">
-                      <img
-                        class="i-chat__profile-pic"
-                        src="images/Avatar-icon.svg"
-                        alt=""
-                      />
-                      <p class="d-align mg-rt">
-                        john doe
-                        <span class="onine sm-ft">online</span>
-                      </p>
+                      <div
+                        class="profile-photo profile-img i-chat__profile-pic mg-rt"
+                      >
+                        <img class="" src="../images/profile.svg" alt="" />
+                      </div>
+
+                      <div>
+                        <p class="name username">Martha Craig</p>
+                        <p class="sm-ft last-seen status">last seen just now</p>
+                      </div>
                     </div>
                   </div>
                   <div>
@@ -444,7 +497,13 @@
         </div>
       </div>
       <div class="btn-container">
-        <button class="inactive-button move-btn">Download Chat as Image</button>
+        <a class="inactive-button move-btn download" id="iphone-btn">
+          Download Chat as Image
+        </a>
+
+        <a class="inactive-button move-btn download inactive" id="android-btn">
+          Download Chat as Image
+        </a>
       </div>
 
       <div class="disclaimer">
@@ -476,5 +535,12 @@
     <script src="../javascript/navbar.js"></script>
     <script src="../javascript/chats.js"></script>
     <script src="../javascript/telegram.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
+
+    <script src="../javascript/download.js"></script>
+    <script src="../javascript/control-panel.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dom-to-image@2.6.0/dist/dom-to-image.min.js"></script>
   </body>
 </html>
