minor changes to whatsapp chat

--- a/pages/snapchat.html
+++ b/pages/snapchat.html
@@ -177,7 +177,7 @@
           <h2 class="preview-title">Preview</h2>
 
           <div class="device-container">
-            <div class="iphone">
+            <div class="iphone active">
               <div class="task-bar d-flex-space-b">
                 <p class="iphone-time time">12:00</p>
                 <div class="network-wifi d-flex">
