--- a/pages/whatsapp.html
+++ b/pages/whatsapp.html
@@ -268,14 +268,13 @@
                     <div class="i-rec-pointy-stuff i-pointy-stuff"></div>
                   </div>
                 </div>
-                <div class="d-flex-space-b d-align i-chat__input-section">
+                <div class="d-flex d-align i-chat__input-section">
                   <img class="mg-rt" src="/images/whatsapp-plus.svg" alt="" />
-                  <div class="i-chat__input--div inp-div">
+                  <div class="inp-div">
                     <textarea
                       class="i-chat__input i-inp inp"
                       name="i-input"
                       id=""
-                      cols="1"
                       rows="1"
                     ></textarea>
                     <img
@@ -284,7 +283,11 @@
                       alt=""
                     />
                   </div>
-                  <img src="/images/whatsapp-Camera.svg" alt="" />
+                  <img
+                    class="inp-img mg-rt"
+                    src="/images/whatsapp-Camera.svg"
+                    alt=""
+                  />
                   <img
                     class="mg-rt inp-img"
                     src="/images/whatsapp=Microphone.svg"
@@ -292,7 +295,7 @@
                   />
                   <img
                     src="/images/whatsapp-Camera.svg"
-                    class="i-send-btn send"
+                    class="mg-rt i-send-btn send"
                     alt=""
                   />
                 </div>
@@ -306,7 +309,7 @@
               <header class="android-header">
                 <div class="android-taskbar d-flex-space-b">
                   <div class="android-time local-time">
-                    <img src="../images/Mobile Signal.svg" alt="" />
+                    <img src="../images/Mobile Signal.svg " alt="" />
                     <img src="../images/Mobile Signal.svg" alt="" />
                   </div>
 
@@ -335,7 +338,7 @@
                   </div>
                   <div>
                     <img
-                      src="/images/whatsapp-android-header-icon.png.svg"
+                      src="../images/whatsapp-android-header-icon.png.svg"
                       alt=""
                     />
                   </div>
