--- a/pages/snapchat.html
+++ b/pages/snapchat.html
@@ -221,7 +221,7 @@
           <div class="preview-header d-flex-space-b">
             <div class="preview-btn-div">
               <button class="inactive-button switch active">iPhone</button>
-              <button class="inactive-button switch">Android</button>
+              <!-- <button class="inactive-button switch">Android</button> -->
             </div>
             <h2 class="preview-heading">Generate Fake Snapchat Chat</h2>
           </div>
@@ -250,11 +250,10 @@
 
                   <p class="mg-rt snap-user username">john doe</p>
                 </div>
-
                 <img src="/images/snapchat-chat-call-arrow.svg" alt="" />
               </div>
               <div class="chat-section">
-                <!-- <div class="i-chat"> -->
+                <div class="i-chat-main chat"></div>
                 <div class="i-chat">
                   <div class="i-chat__div">
                     <p class="i-my-chat">ME</p>
@@ -290,7 +289,6 @@
                     </div>
                   </div>
                 </div>
-                <!-- </div> -->
                 <!-- ============ -->
                 <!-- INPUT SECTION -->
                 <div class="i-input__div d-flex-space-a">
@@ -385,7 +383,6 @@
     <script src="../javascript/navbar.js"></script>
     <script src="../javascript/chats.js"></script>
     <script src="../javascript/snapchat.js"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
 
@@ -442,7 +439,6 @@
         }
       );
       // =======================================Status FUNCTIONALITY=======================================
-
       // ==========================profile image functionality====================================
 
       inputFile.addEventListener("change", function () {
