--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -266,6 +266,7 @@
               </div>
 
               <div class="chat-section">
+                <div class="chat i-chat-main"></div>
                 <!-- THE USER CHAT -->
                 <div class="i-chat">
                   <div class="i-my-chat i-chat__bubble">
@@ -426,6 +427,7 @@
                 <!-- ============================================== -->
               </header>
               <div class="chat-section">
+                <div class="chat a-chat-main"></div>
                 <!-- THE USER CHAT -->
                 <div class="a-chat">
                   <div class="a-receiver-chat a-chat__bubble">
@@ -443,9 +445,7 @@
                       picture and build their own Twitter conversation with this
                       generator, so it does not matter that you are an egg
                     </p>
-                    <span class="sm-fnt i-chat__time d-flex"
-                      >11.00<img src="images/Checkmark-read.svg" alt=""
-                    /></span>
+                    <span class="sm-fnt i-chat__time d-flex">11.00 </span>
                     <div class="a-pointy-stuff a-my-pointy-stuff"></div>
                   </div>
                   <div class="a-receiver-chat a-chat__bubble">
